karnc/tests/fixtures/positive/177_consume_adapter_workers/src/tokens.karn
adapter tokens {
  binding "./tokens.binding.ts" requires { "jose": "^5" }

  exports capability { Jwt }

  capability Jwt {
    fn sign(sub: String, secret: String) -> Effect[String]
  }

  provides Jwt = JoseJwt
}
