karnc/tests/fixtures/negative/145_adapter_consumes_whole_unit/src/logging.karn
adapter logging {
  binding "./logging.binding.ts"

  exports capability { Log }

  capability Log {
    fn info(msg: String) -> Effect[()]
  }

  provides Log = ConsoleLog
}
